Center align password requirements error and resolve autocomplete attribute issues

--- a/src/app/components/sign-up/sign-up.component.scss
+++ b/src/app/components/sign-up/sign-up.component.scss
@@ -58,7 +58,7 @@
 
                 .error-div {
                     margin: 0.2rem auto;
-                    align-self: center;
+                    max-width: 70%;
                 }
             }
 
